--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 pycparser==2.22
+python-dateutil==2.9.0.post0   # 🔥 added for relativedelta
 python-dotenv==1.0.0
 SQLAlchemy==2.0.43
 typing_extensions==4.14.1
