--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+packaging==25.0
+pipdeptree==2.28.0
 pycparser==2.22
-python-dateutil==2.9.0.post0   # 🔥 added for relativedelta
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.14.1
 Werkzeug==2.3.7
