--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.2.1
 dnspython==2.7.0
 email-validator==2.0.0.post2
 Flask==2.3.3
+gunicorn==21.2.0
 Flask-Login==0.6.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.0.3
