--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -28,6 +28,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0",
     "typescript": "^5.3.0"
   },
   "private": true
