--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==25.1.0
 blinker==1.9.0
 cffi==1.17.1
-click==8.2.1
+click==8.1.8
 dnspython==2.7.0
 email-validator==2.0.0.post2
 Flask==2.3.3
@@ -31,3 +31,5 @@ Werkzeug==2.3.7
 WTForms==3.2.1
 Flask-Babel==3.1.0
 psycopg2-binary
+requests==2.32.3
+PyJWT==2.10.1
