--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -4,6 +4,7 @@
   "main": "expo/AppEntry",
   "scripts": {
     "start": "expo start",
+    "prestart": "node scripts/fix-connectivity.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
